--- a/CSS/Navbar.html
+++ b/CSS/Navbar.html
@@ -8,6 +8,48 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <nav>
+        <div class="logo">
+            LOGO
+        </div>
+        <div class="navigation">
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Contact</a>
+        </div>
+    </nav>
+    <main>
+        <section class="section1">
+            <div class="big_square">
+                <div class="little_square"></div>
+                <div class="middle_square"></div>
+            </div>
+            <div class="big_square">
+                <div class="alone_rectangle"></div>
+            </div>
+            <div class="big_square">
+                <div class="middle_rectangle"></div>
+                <div class="little_rectangle"></div>
+            </div>
+        </section>
+        <section class="section2">
+            <div class="big_square_left"></div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel cum obcaecati facilis quae. Perferendis doloremque, id repellat explicabo, corporis nostrum possimus dolores cumque maiores dolor sequi, quam ut! Natus quo obcaecati sint cumque, quas provident aspernatur explicabo optio soluta. Incidunt accusamus facere odit, omnis minima sed nostrum a. Facilis doloribus ad fugit, repellat obcaecati aperiam ipsam fugiat corrupti deserunt reiciendis maiores! Maxime fugit voluptatibus iusto tenetur asperiores, explicabo laboriosam ex soluta quibusdam nemo. Sunt nesciunt repudiandae quos dolore soluta, fugiat quia dolor commodi non. Laboriosam quis praesentium laborum sequi adipisci cumque fugiat, repellendus reprehenderit reiciendis quas rerum libero tenetur veniam laudantium deleniti necessitatibus.</p>
+        </section>
+        <section class="section3">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel cum obcaecati facilis quae. Perferendis doloremque, id repellat explicabo, corporis nostrum possimus dolores cumque maiores dolor sequi, quam ut! Natus quo obcaecati sint cumque, quas provident aspernatur explicabo optio soluta. Incidunt accusamus facere odit, omnis minima sed nostrum a. Facilis doloribus ad fugit, repellat obcaecati aperiam ipsam fugiat corrupti deserunt reiciendis maiores! Maxime fugit voluptatibus iusto tenetur asperiores, explicabo laboriosam ex soluta quibusdam nemo. Sunt nesciunt repudiandae quos dolore soluta, fugiat quia dolor commodi non. Laboriosam quis praesentium laborum sequi adipisci cumque fugiat, repellendus reprehenderit reiciendis quas rerum libero tenetur veniam laudantium deleniti necessitatibus.</p>
+            <div class="big_square_right"></div>
+        </section>
+        
+    </main>
+
+    <footer>
+        <div class="footer">
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Contact</a>
+            <div class="legal">Mentions légales</div>
+        </div>
+    </footer>
 </body>
 </html>
